--- a/srcs/requirements/nginx/Dockerfile
+++ b/srcs/requirements/nginx/Dockerfile
@@ -7,14 +7,14 @@ RUN apt-get install -y nginx
 RUN apt-get install -y openssl
 
 # generating self signed SSL certificate and key
-# RUN openssl req -newkey rsa:4096 \
-# 			-x509 \
-# 			-sha256 \
-# 			-days 3650 \
-# 			-nodes \
-# 			-out /etc/ssl/nginx-selfsigned.crt \
-# 			-keyout /etc/ssl/nginx-selfsigned.key \
-# 			-subj "/C=BE/ST=BRU/L=1000-Bruxelles/O=42NETWORK/OU=s19/CN=localhost"
+RUN openssl req -newkey rsa:4096 \
+			-x509 \
+			-sha256 \
+			-days 3650 \
+			-nodes \
+			-out /etc/ssl/nginx-selfsigned.crt \
+			-keyout /etc/ssl/nginx-selfsigned.key \
+			-subj "/C=BE/ST=BRU/L=1000-Bruxelles/O=42NETWORK/OU=s19/CN=localhost"
 
 RUN mkdir /tools
 
