--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,13 +1,48 @@
 server {
-	listen 80;
+	listen 80 default_server;
+	listen [::]:80 default_server;
 
 	root /var/www/html;
 
 	index index.php index.html index.htm index.nginx-debian.html;
 
-
+	server_name localhost;
 
 	autoindex on;
 
+	location / {
+		try_files $uri $uri/ =404;
+	}
 
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+	}
+}
+
+server {
+
+	listen 443 ssl default_server;
+	listen [::]:443 ssl default_server;
+
+	ssl on;
+	ssl_certificate /etc/ssl/nginx-selfsigned.crt;
+	ssl_certificate_key /etc/ssl/nginx-selfsigned.key;
+
+	root /var/www/html;
+
+	index index.php index.html index.htm index.nginx-debian.html;
+
+	server_name localhost;
+
+	autoindex on;
+
+	location / {
+		try_files $uri $uri/ =404;
+	}
+
+	location ~ \.php$ {
+		include snippets/fastcgi-php.conf;
+		fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+	}
 }
