--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -6,6 +6,20 @@ services:
       - 443:443
     volumes:
       - "www:/var/www/html"
+    networks:
+      - inception
+  mariadb:
+    build: ./requirements/mariadb/
+    volumes:
+      - "db:/var/lib/mysql"
+    networks:
+      - inception
+  wordpress:
+    build: ./requirements/wordpress/
+    volumes:
+      - "www:/www_folder"
+    networks:
+      - inception
 
 networks:
   inception:
