--- a/srcs/requirements/wordpress/Dockerfile
+++ b/srcs/requirements/wordpress/Dockerfile
@@ -2,7 +2,8 @@ FROM debian:buster
 
 RUN apt-get update && apt-get upgrade -y
 
-RUN apt-get install wget php7.3 php7.3-fpm php7.3-mysql -y
+RUN apt-get install wget php7.3 php7.3-fpm -y
+# RUN apt-get install php7.3-mysql -y
 
 RUN mkdir /tools
 
