problem with wordpress connecting to mariadb

--- a/srcs/.env
+++ b/srcs/.env
@@ -3,3 +3,4 @@
 WORDPRESS_DB_NAME=wordpress_db
 WORDPRESS_DB_USER=wordpress_user
 WORDPRESS_DB_USER_PASSWORD=MySecurePassword
+MARIADB_ROOT_PASSWORD=bababobo
