--- a/srcs/docker-compose.yml
+++ b/srcs/docker-compose.yml
@@ -1,6 +1,7 @@
 services:
   mariadb:
     build: ./requirements/mariadb/
+    container_name: mariadb
     image: mariadb
     env_file: ./.env
     restart: always
@@ -13,10 +14,12 @@ services:
     depends_on:
       - mariadb
     build: ./requirements/wordpress/
+    container_name: wordpress
     image: wordpress
     restart: always
     volumes:
-      - "www:/www_folder"
+      - "www:/var/www/html"
+      # - "www:/www_folder"
     networks:
       - inception
 
@@ -25,6 +28,7 @@ services:
       - mariadb
       - wordpress
     build: ./requirements/nginx/
+    container_name: nginx
     image: nginx
     restart: always
     ports:
