--- a/srcs/requirements/nginx/tools/default.conf
+++ b/srcs/requirements/nginx/tools/default.conf
@@ -1,26 +1,4 @@
 server {
-	listen 80 default_server;
-	listen [::]:80 default_server;
-
-	root /var/www/html;
-
-	index index.php index.html index.htm index.nginx-debian.html;
-
-	server_name localhost;
-
-	autoindex on;
-
-	location / {
-		try_files $uri $uri/ =404;
-	}
-
-	location ~ \.php$ {
-		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/run/php/php7.3-fpm.sock;
-	}
-}
-
-server {
 
 	listen 443 ssl default_server;
 	listen [::]:443 ssl default_server;
@@ -43,6 +21,6 @@ server {
 
 	location ~ \.php$ {
 		include snippets/fastcgi-php.conf;
-		fastcgi_pass unix:/run/php/php7.3-fpm.sock;
+		fastcgi_pass wordpress:9000;
 	}
 }
