add the chown commands and mkfifo, but there are some issue with mariadb container. look at the photo for the error messages

--- a/srcs/requirements/mariadb/Dockerfile
+++ b/srcs/requirements/mariadb/Dockerfile
@@ -8,10 +8,10 @@ RUN mkdir /tools
 
 COPY ./tools/* /tools/
 
-RUN chown -R mysql:mysql /var/lib/mysql; \
-	mkdir -p /var/run/mysqld; \
-	mkfifo /var/run/mysqld/mysqld.sock; \
-	chown -R mysql:mysql /var/run/mysqld
+# RUN chown -R mysql:mysql /var/lib/mysql; \
+# 	mkdir -p /var/run/mysqld; \
+# 	mkfifo /var/run/mysqld/mysqld.sock; \
+# 	chown -R mysql:mysql /var/run/mysqld
 
 # RUN service mysql start
 
