project seems totally functionnal now

--- a/srcs/.env
+++ b/srcs/.env
@@ -1,4 +1,13 @@
 
+# WORDPRESS
+WP_DB_HOST=mariadb
+WP_ADMIN_LOGIN=Babar
+WP_ADMIN_PW=MyElephantFamily
+WP_ADMIN_EMAIL=babar@elephants.pro
+WP_NON_ADMIN_LOGIN=underpaid_intern
+WP_NON_ADMIN_PW=LetsGoMakeCoffee
+WP_NON_ADMIN_EMAIL=some_intern@babar-corp.brussels
+
 # MARIADB
 WORDPRESS_DB_NAME=wordpress_db
 WORDPRESS_DB_USER=wordpress_user
